# LAI_Guardian-Desafio-Participa-DF

./: README.md  pyproject.toml  requirements.txt  run.py  run_full.py
data/processed/run_20260129_003117/: auditoria.xlsx  metrics.json  model.joblib  relatorio.json
data/raw/: dataset_labeled.csv
lai_guardian/: cli.py  pipeline.py
lai_guardian/core/: anonymizer.py  detector.py  engine.py  metrics.py  patterns.py  validators.py
lai_guardian/io/: loader.py
lai_guardian/ml/: model.py
lai_guardian/reports/: excel.py
lai_guardian/ui/: render.py  theme.py
tests/: test_validators.py
