[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lai-guardian"
version = "0.1.0"
description = "LAI/LGPD detector + anonymizer + evaluator (Hackathon-grade)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "rich>=13.0",
  "scikit-learn>=1.3",
  "openpyxl>=3.1",
  "joblib>=1.3",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
dev = ["pytest>=7.0"]
